# PixelImageReconstruction

./: .gitignore  ORGANIZATION.md  README.md  effectiveness_visualization_base.py  generate_test_grid.py  optimize_image_scale.py  optimize_image_transform.py  pixel_spacing_optimizer.py  pyproject.toml  visualize_offset_effectiveness.py  visualize_scale_effectiveness.py
docs/: README_WASM.md
ml-training/: compact_unet.py  compare_attention_configs.py  create_training_data.py  data_synthesis_pipeline.py  enhanced_spatial_attention_models.py  exact_color_data_pipeline.py  exact_color_models.py  exact_color_transforms.py  export_to_onnx.py  improved_spatial_attention.py  infer_scale_offset.py  inference.py  inference_compact.py  inference_enhanced_spatial_attention.py  inference_medium.py  inference_palette_unet.py  medium_unet.py  palette_unet.py  palette_utils.py  pixel_unet.py  scale_offset_model.py  train_compact_unet.py  train_enhanced_spatial_attention.py  train_exact_color_unet.py  train_medium_unet.py  train_medium_unet_spatial_attention.py  train_palette_unet.py  train_pixel_unet.py  train_scale_offset.py
notebooks/: edge_analysis_1d.ipynb
web-app/: Cargo.toml  build.sh  demo.html  example.html
web-app/src/: lib.rs
